[project]
name = "helioscta-backend"
version = "0.1.0"
description = "Backend for Helios CTA"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {backend = "backend"}
packages = ["backend", "backend.utils", "backend.src"]